hal2/deploy/08-pod.yml
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: quarkus-demo
  name: quarkus-demo
spec:
  containers:
  - image: docker-registry.default.svc:5000/test/quarkus-demo
    imagePullPolicy: Always
    name: quarkus-image
    ports:
    - containerPort: 8080
      name: http
      protocol: TCP
