hal2/deploy/06-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quarkus
  name: quarkus
spec:
  ports:
    - name: 8080-8080
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: quarkus
  type: ClusterIP
