hal2/deploy/07-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: quarkus
  name: quarkus
spec:
  port:
    targetPort: 8080-8080
  to:
    kind: Service
    name: quarkus
    weight: 100
  wildcardPolicy: None
